# collector-v1

./: .coverage  .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 4593c9eaf88e_add_categories.py  e4ebaefa4d9a_create_users_table.py
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  categories.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/models/: __init__.py  category.py  user.py
app/schemas/: auth.py  category.py  user.py
collector_v1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend-react/: package-lock.json  package.json
frontend-react/src/: App.css  App.tsx
frontend-react/src/lib/: api.ts  types.ts
frontend-react/src/pages/: Admin.tsx  Auth.tsx  Catalogue.tsx  Me.tsx
k6/: k6-loadtest-v1.js  k6-loadtest-v2.js
k8s/: configmap.yml  deployment.yml  ingress.yml  postgres-secret.example.yml  postgres-secret.yml  postgres.yml  secret.yml  service.yml
nginx/: default.conf
scripts/: check.sh  create_admin.py  gen_tls_local.sh
tests/: test_auth_flow.py  test_health.py
tests/integration/: test_auth_and_categories.py
tests/unit/: test_rbac.py  test_register_policy.py  test_security.py
